# cleanly

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: agent.py  analysis.py  auth.py  cvat.py  dashboard.py  employees.py  map.py  planning.py
backend/app/services/: agent_service.py  analysis_service.py  cvat_service.py  employee_service.py  geo_service.py  planning_service.py  store.py
db/: cvat.json  georefs.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analysis/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/employees/: page.tsx
frontend/src/app/expedition/: page.tsx
frontend/src/app/images/: page.tsx
frontend/src/app/map/: page.tsx
frontend/src/components/: HeatmapLayer.tsx  MapView.tsx  Nav.tsx  Raccoon.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/types/: leaflet-heat.d.ts
